--- a/Code/demo1/demo1/demo1.vcxproj.filters
+++ b/Code/demo1/demo1/demo1.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="feature.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="nca.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="feature.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="nca.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
