--- a/Code/demo1/demo1/demo1.vcxproj
+++ b/Code/demo1/demo1/demo1.vcxproj
@@ -84,9 +84,11 @@
   <ItemGroup>
     <ClCompile Include="feature.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="nca.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="feature.h" />
+    <ClInclude Include="nca.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
