--- a/Code/demo1/demo1/demo1.vcxproj
+++ b/Code/demo1/demo1/demo1.vcxproj
@@ -85,10 +85,13 @@
     <ClCompile Include="feature.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="nca.cpp" />
+    <ClCompile Include="traindata.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="dirent.h" />
     <ClInclude Include="feature.h" />
     <ClInclude Include="nca.h" />
+    <ClInclude Include="traindata.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
