--- a/Code/demo1/demo1/demo1.vcxproj
+++ b/Code/demo1/demo1/demo1.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="traindata.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="demo1.h" />
     <ClInclude Include="dirent.h" />
     <ClInclude Include="feature.h" />
     <ClInclude Include="nca.h" />
