C++版本，简单带反馈的手动标注系统

--- a/Code/AnnotationSystem/AnnotationSystem/AnnotationSystem.vcxproj
+++ b/Code/AnnotationSystem/AnnotationSystem/AnnotationSystem.vcxproj
@@ -73,7 +73,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AnnotationSystem.h" />
+    <ClInclude Include="Feature.h" />
     <ClInclude Include="Frame.h" />
+    <ClInclude Include="Recognition.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SplitImage.h" />
     <ClInclude Include="stdafx.h" />
