--- a/Code/AnnotationSystem/AnnotationSystem/AnnotationSystem.vcxproj.filters
+++ b/Code/AnnotationSystem/AnnotationSystem/AnnotationSystem.vcxproj.filters
@@ -32,6 +32,12 @@
     <ClInclude Include="SplitImage.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Feature.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Recognition.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
