--- a/Code/AnnotationSystem/AnnotationSystem/AnnotationSystem.vcxproj.filters
+++ b/Code/AnnotationSystem/AnnotationSystem/AnnotationSystem.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClInclude Include="Recognition.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="lmsal.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
