--- a/Code/RecognitionSystem/RecognitionSystem/RecognitionSystem.vcxproj
+++ b/Code/RecognitionSystem/RecognitionSystem/RecognitionSystem.vcxproj
@@ -118,10 +118,15 @@
     <ClInclude Include="sift_bow.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="test.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="feature.cpp" />
+    <ClCompile Include="func.cpp" />
+    <ClCompile Include="lbp.cpp" />
     <ClCompile Include="RecognitionSystem.cpp" />
     <ClCompile Include="RecognitionSystemDlg.cpp" />
+    <ClCompile Include="sift_bow.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
